sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/Fresh_Fit_Field_Visit__c.object-meta.xml
<CustomObject>
    <label>Fresh Fit Field Visit</label>
    <nameField>
        <displayFormat>FF-Visit-{0000}</displayFormat>
        <label>Fresh Fit Field Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fresh Fit Field Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>