sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/fields/FF_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_ID__c</fullName>
    <label>FF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>