sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/fields/Field_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Field_Co_ordinator__c</fullName>
    <label>Field Co-ordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wali Mwalugongo</fullName>
            </value>
            <value>
                <fullName>Douglas Lifede</fullName>
            </value>
            <value>
                <fullName>Valbett Adera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>