sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fresh Fit Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fresh Fit Field Visits</relationshipLabel>
    <relationshipName>Fresh_Fit_Field_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>