sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/recordTypes/Fresh_Fit_Field_Visits.recordType-meta.xml
<RecordType>
    <fullName>Fresh_Fit_Field_Visits</fullName>
    <active>true</active>
    <label>Fresh Fit Field Visits</label>
</RecordType>