sfSandBoxCode/force-app/main/default/objects/Fresh_Fit_Field_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FF_ID__c</columns>
    <columns>Visit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>